--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apportionment",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Collection of apportionment methods.",
   "types": "./dist/index.d.ts",
   "keywords": [
@@ -23,7 +23,7 @@
   "main": "./dist/index.js",
   "module": "./index.js",
   "scripts": {
-    "test": "tape -r ts-node/register test/*.test.ts | tap-prettify -",
+    "test": "tape -r ts-node/register test/*.test.ts",
     "coverage": "nyc yarn test",
     "report": "nyc report --reporter=html",
     "lint": "eslint src --ext .ts",
@@ -57,10 +57,11 @@
     "eslint": "^8.13.0",
     "nyc": "^15.1.0",
     "prettier": "2.6.2",
-    "tap-prettify": "^0.0.2",
     "tape": "^5.5.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
-  "files": ["dist/**/*"]
+  "files": [
+    "dist/**/*"
+  ]
 }
